log
Sat, May 17, 2025 11:04:11 AM: 
 sudoku.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  0|5
total_score: 0/70
3f0e54c
Sat, May 17, 2025 11:32:13 AM: 
 sudoku.c | 40 ++++++++++++++++++++++++++++++++++++++++
 1 file changed, 40 insertions(+)
 tests:  0|5
total_score: 0/70
36cb38d
Sat, May 17, 2025 11:33:29 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
a1a57d7
Sat, May 17, 2025 11:40:55 AM: 
 sudoku.c | 16 ++++++++--------
 1 file changed, 8 insertions(+), 8 deletions(-)
 tests:  3|4
total_score: 20/70
7e146e4
Sat, May 17, 2025 12:03:53 PM: 
 sudoku.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  3|4
total_score: 20/70
85eef5c
Sat, May 17, 2025 12:04:41 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
36d7e29
Sat, May 17, 2025 12:17:34 PM: 
 sudoku.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  7|1
total_score: 55/70
208747c
Sat, May 17, 2025 12:31:36 PM: 
 sudoku.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:134:5: error: value computed is not used [-Werror=unused-value]
     *cont++;
     ^~~~~~~
sudoku.c:131:11: error: unused variable 'current' [-Werror=unused-variable]
     Node *current = top(stack);
           ^~~~~~~
cc1.exe: all warnings being treated as errors
02dd002
Sat, May 17, 2025 12:36:13 PM: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:134:5: error: value computed is not used [-Werror=unused-value]
     *cont++;
     ^~~~~~~
cc1.exe: all warnings being treated as errors
7fd4e4b
Sat, May 17, 2025 12:36:47 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
8ab20fd
Sat, May 17, 2025 12:40:58 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  10|0
total_score: 70/70
055c148
